= Changelog

All notable changes to _parfetch_ are documented in this file. The
sections should follow the order _Packaging_, _Added_, _Changed_,
_Fixed_ and _Removed_.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a ChangeLog].

== Unreleased

=== Added

* Support `MASTER_SITE_OVERRIDE` and `MASTER_SITE_FREEBSD`
* Subsume `makesum` as well to make use of on-the-fly
  checksumming too and to skip the sha256(1) calls afterwards.

== [a20211126] - 2021-11-26

No changelog for old releases.