@@ -28,6 +28,7 @@ _PARFETCH_ENV=	${_DO_FETCH_ENV} \
 		${_PATCH_SITES_ENV} \
 		dp__PARFETCH_MAKESUM='${_PARFETCH_MAKESUM}' \
 		dp_CHECKSUM_ALGORITHMS='${CHECKSUM_ALGORITHMS:tu}' \
+		dp_PARFETCH_MAKESUM_KEEP_TIMESTAMP='${PARFETCH_MAKESUM_KEEP_TIMESTAMP:Dyes}' \
 		dp_PARFETCH_MAX_HOST_CONNECTIONS=${PARFETCH_MAX_HOST_CONNECTIONS} \
 		dp_PARFETCH_MAX_TOTAL_CONNECTIONS=${PARFETCH_MAX_TOTAL_CONNECTIONS}
 _DO_PARFETCH=	${SETENV} ${_PARFETCH_ENV} ${PARFETCH}
